# ReliabilityHistory

./: .gitignore  Cargo.toml  README.md  TODO  launch_gui.sh  package-lock.json  package.json
.github/workflows/: release.yml
gui/: index.html
reliability-monitor/src-tauri/: Cargo.toml
reliability-monitor/src-tauri/src/: main.rs
service/: reliability-history-collector.service  reliability-history-collector.timer
src/: index.html  journal.rs  main.js  main.rs  model.rs  styles.css  ui.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: journal.rs  lib.rs  model.rs  reliability.rs  timeline.rs
src-tauri/src/package/: deb.rs  mod.rs  package.rs
